# git-branch-keeper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  SAFETY.md  git-branch-keeper.example.json  git_branch_keeper.json.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: TODO.md
git_branch_keeper/: __init__.py  __version__.py  args.py  cli.py  config.py  constants.py  core.py  exceptions.py  formatters.py  logging_config.py  threading_utils.py  tui.py
git_branch_keeper/cli/: __init__.py  args.py  main.py  undo.py
git_branch_keeper/core/: __init__.py  branch_keeper.py
git_branch_keeper/formatters/: __init__.py  branch.py  date.py  links.py  status.py
git_branch_keeper/models/: __init__.py  branch.py  worktree.py
git_branch_keeper/services/: __init__.py  branch_status_service.py  branch_validation_service.py  cache_service.py  deletion_journal.py  display_service.py  git_service.py  github_service.py  undo_service.py
git_branch_keeper/services/git/: __init__.py  branch_queries.py  github.py  merge_detector.py  operations.py  worktrees.py
git_branch_keeper/ui/: __init__.py  app.py  screens.py  widgets.py
git_branch_keeper/utils/: __init__.py  logging.py  remotes.py
tests/: __init__.py  conftest.py  test_branch_discovery.py  test_branch_status_service.py  test_cache_refresh.py  test_deletion_journal.py  test_edge_cases.py  test_git_service.py  test_github_service.py  test_integration.py  test_merge_detection_accuracy.py  test_merge_method_detection.py  test_remote_deletion.py  test_remote_detection.py  test_squash_merge_demotion.py  test_status_detection.py  test_tui_app.py  test_tui_marking.py  test_tui_mouse.py
