[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-branch-keeper"
version = "0.1.0"
description = "A smart Git branch management tool that helps keep your repository clean and organized"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["git", "branch", "management", "cleanup"]
authors = [
    { name = "WeR1Hub" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "gitpython>=3.1.0",
    "rich>=10.0.0",
    "requests>=2.25.0"
]

[project.urls]
Homepage = "https://github.com/WeR1Hub/git-branch-keeper"
Repository = "https://github.com/WeR1Hub/git-branch-keeper.git"

[project.scripts]
git-branch-keeper = "git_branch_keeper.cli:main"
