[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-branch-keeper"
version = "0.1.0"
description = "A smart Git branch management tool that helps keep your repository clean and organized"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["git", "branch", "management", "cleanup"]
authors = [
    { name = "Stefan Lesicnik" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "gitpython>=3.1.0",
    "rich>=10.0.0",
    "PyGithub>=2.1.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=git_branch_keeper",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "mypy>=1.14.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.14.2",
]

[project.urls]
Homepage = "https://github.com/lsdcapital/git-branch-keeper"
Repository = "https://github.com/lsdcapital/git-branch-keeper.git"

[project.scripts]
git-branch-keeper = "git_branch_keeper.cli:main"
